# foundry-blockchain-course

./: .gitignore  .gitmodules  Makefile  README.md  brownie-config.yaml  pyproject.toml
challenge-1/: description.md
contracts/lesson-3/: Box.sol  BoxFactory.sol
contracts/lesson-4/: EthToUsdConverter.sol  FundMe.sol  _FundMe.sol
scripts/: utils.py
scripts/challenge-1/: call_mint.py  challange_abi.json  solve.py
scripts/challenge-10/: cast_commands.txt
scripts/challenge-11/: Encode.sol  cast_commands.txt
scripts/challenge-2/: challange_abi.json  description.md  solve.py
scripts/challenge-3/: challange_abi.json  solve.py
scripts/challenge-4/: challange_abi.json  description.md  solve.py
scripts/challenge-5/: challange_abi.json  description.md  solve.py
scripts/challenge-6/: challange_abi.json  description.md  solve.py
scripts/challenge-7/: challange_abi.json  description.md  get_storage_value.py  solve.py
scripts/challenge-9/: challenge_abi.json  decode_input_data.js  package-lock.json  package.json
scripts/lesson-3/: deploy.py
